Fixes odd overflow issue
When only 1 row of class cards is present, this was overflowing and
looking off

--- a/src/templates/styles/locations.scss
+++ b/src/templates/styles/locations.scss
@@ -72,9 +72,7 @@
         font-size: 1.5rem;
       }
       .leaflet-container {
-        min-height: 260px;
-        height: 100%;
-        max-height: 426px;
+        min-height: 370px;
         width: 100%;
         box-sizing: border-box;
       }
